--- a/src/gui/SplashWindow.form
+++ b/src/gui/SplashWindow.form
@@ -69,7 +69,9 @@
       <SubComponents>
         <Component class="javax.swing.JProgressBar" name="loadingProBar">
           <Properties>
-            <Property name="stringPainted" type="boolean" value="true"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="66" green="ff" red="66" type="rgb"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="loadingLabel">
